--- a/blogpost.html
+++ b/blogpost.html
@@ -10,8 +10,15 @@
 </head>
 
 <body>
-    <h1>Esto sera un intento de blogspot</h1>
-    <p>Y este es el intento de parrafo de inicio</p>
+    <div id="container">
+        <div id="cabecera">
+            Cabecera
+        </div>
+        <div id="post">
+            <h1>Este es el titulo atractivo e interesante del post</h1>
+            <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
+        </div>
+    </div>
 </body>
 
 </html>
