--- a/blogpost.html
+++ b/blogpost.html
@@ -16,10 +16,10 @@
             <span id="tagline"> Este es el nuevo titulo </span>
         </div>
         <div id="post">
-            <h1>Este es el titulo atractivo e interesante del post</h1>
+            <h1>Este es el título atractivo e interesante del post</h1>
             <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
             <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
-            <p>Suscribete y dale like</p>
+            <p>Suscribete y dale like 🤝</p>
         </div>
     </div>
 </body>
